--- a/WebDevExample/index.html
+++ b/WebDevExample/index.html
@@ -1,3 +1,19 @@
+{% comment %} <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guessing Game</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="game-container">
+        <!-- Game content will be added here -->
+    </div>
+    <script src="game.js"></script>
+</body>
+</html> {% endcomment %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
